--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^7.0.10",
     "redis": "^5.9.0",
     "slugify": "^1.6.6",
+    "stripe": "^20.0.0",
     "zod": "^4.1.12"
   }
 }
