--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@opensearch-project/opensearch": "^3.5.1",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "redis": "^5.9.0",
     "slugify": "^1.6.6",
